Fixed White Space Issue When Viewing Landing Page on Larger Screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,9 +28,9 @@ body {
 
 /* Landing Page Image and Text */
 .jumbotron-section {
-    background: url('/media/home2.jpg') no-repeat bottom center;
+    background: url('/media/home2.jpg') no-repeat center center;
     background-size: cover;
-    height: 555px;
+    height: inherit;
     width: 100%;
 
     display: flex;
@@ -43,7 +43,7 @@ body {
 .jumbotron-content {
     background-color: #f1cc7ae8;
     padding: 5px;
-    margin: 5px auto;
+    margin-bottom: 5rem;
     max-height: 400px;
     width: 450px;
     box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.42);
